# webgpu-tutorial

./: .gitignore  README.md  run.sh
base/: Cargo.toml  index.html
base/src/: example.wgsl  lib.rs
basic/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.common.js  webpack.config.js
basic/.cargo/: config.toml
basic/js/: GUIHelper.js  index.js
basic/src/: camera.rs  color.rs  constant.rs  example.wgsl  lib.rs  util.rs
basic/src/primitive/: matrix.rs  mod.rs  shape.rs  transform.rs  vector.rs  vertex.rs
basic/static/: index.html  style.css
basic/sub_crates/eg_app/: Cargo.toml
basic/sub_crates/eg_app/src/: lib.rs
basic/sub_crates/eg_camera/: Cargo.toml
basic/sub_crates/eg_camera/src/: lib.rs
basic/sub_crates/eg_ecs/: Cargo.toml
basic/sub_crates/eg_math/: Cargo.toml
basic/sub_crates/eg_math/src/: lib.rs  vector.rs
basic/sub_crates/eg_primitive/: Cargo.toml
basic/sub_crates/eg_primitive/src/: lib.rs  shape.rs  vertex.rs
basic/sub_crates/eg_render/: Cargo.toml
basic/sub_crates/eg_render/src/: camera.rs  example.wgsl  input.rs  lib.rs  render.rs
basic/sub_crates/eg_util/: Cargo.toml
basic/sub_crates/eg_util/src/: macros.rs
basic/sub_crates/my_math/: Cargo.toml
basic/sub_crates/my_math/src/: matrix.rs  transform.rs
basic/sub_crates/my_primitive/: .gitignore  Cargo.toml
basic/sub_crates/my_primitive/src/: constant.rs  lib.rs  shape.rs  vertex.rs
basic/tests/: primitive.rs  test_primitive.rs
composite-shader/: Cargo.toml  README.md
composite-shader/js/: index.js
composite-shader/src/: lib.rs  monolithic.wgsl  top.wgsl  uniform.wgsl
composite-shader/static/: index.html
layout/: Cargo.toml  README.md  webpack.common.js  webpack.dev.js  webpack.prod.js
layout/src/: lib.rs
layout/static/: index.html  index.js
offscreen-on-worker/: Cargo.toml  README.md  package-lock.json  package.json  vite.config.js
offscreen-on-worker/src/: canvas.rs  example.wgsl  lib.rs
offscreen-on-worker/src/worker/: mainWorker.js
offscreen-on-worker/static/: index.html  index.js
rust-webpack-template/: Cargo.toml  package-lock.json  package.json  webpack.config.js
webgl-multi-canvas/: Cargo.toml  package.json  webpack.common.js
webgl-multi-canvas/src/: example.wgsl  lib.rs
webgl-multi-canvas/static/: index.html
webgpu-or-webgl/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.common.js
webgpu-or-webgl/js/: index.js
webgpu-or-webgl/src/: lib.rs
webgpu-or-webgl/static/: index.html
wgpu-gl-surfaces/: Cargo.toml  README.md  package-lock.json  package.json
wgpu-gl-surfaces/.cargo/: config.toml
wgpu-gl-surfaces/js/: index.js
wgpu-gl-surfaces/src/: lib.rs
wgpu-gl-surfaces/static/: index.html
