[package]
name = "basic"
description = "For Easy and useful WebGPU example"
repository = "https://github.com/ecoricemon/webgpu-tutorial"
license = "Apache-2.0, MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[workspace]
members = [
    "sub_crates/*"
]

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1.7"
eg_app = { version = "0.1.0", path = "sub_crates/eg_app" }

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.37"
