[package]
name = "basic"
description = "A basic wgpu + webpack example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "MouseEvent"
]}
console_log = "1.0.0"
wgpu = "27.0.1"
bytemuck = { version = "1.24.0", features = [
    "derive"
]}
console_error_panic_hook = "0.1.7"
