[package]
name = "webgl-multi-canvas"
description = "wgpu WebGL2 multiple canvases naive approach"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.19"
wgpu = { version = "0.18.0", features = ["webgl"] } 
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
]}
bytemuck = { version = "1.13.1", features = [
    "derive"
]}
raw-window-handle = "0.5.2"
