[package]
name = "eg_app"
description = "sub crate"
repository = "https://github.com/ecoricemon/webgpu-tutorial"
license = "Apache-2.0, MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
winit = "0.29.1-beta"
eg_render = { version = "0.1.0", path = "../eg_render" }
eg_util = { version = "0.1.0", path = "../eg_util" }

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.37"
