[package]
name = "eg_ecs"
description = "sub crate"
repository = "https://github.com/ecoricemon/webgpu-tutorial"
license = "Apache-2.0, MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.37"
