[package]
name = "eg_render"
description = "sub crate"
repository = "https://github.com/ecoricemon/webgpu-tutorial"
license = "Apache-2.0, MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
wgpu = "0.17.1"
winit = "0.29.1-beta"
bytemuck = { version = "1.13.1", features = [
    "derive",
    "min_const_generics"
]}
web-sys = { version = "0.3.64", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "MouseEvent"
]}
eg_math = { version = "0.1.0", path = "../eg_math" }
eg_primitive = { version = "0.1.0", path = "../eg_primitive" }
eg_util = { version = "0.1.0", path = "../eg_util" }

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.37"
