[package]
name = "eg_util"
description = "sub crate"
repository = "https://github.com/ecoricemon/webgpu-tutorial"
license = "Apache-2.0, MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web-sys = "0.3.64"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.37"
