[package]
name = "my_primitive"
description = "sub crate"
repository = "https://github.com/ecoricemon/webgpu-tutorial"
license = "Apache-2.0, MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.13.1", features = [
    "derive"
]}
my_math = { version = "0.1.0", path = "../my_math" }
wgpu = "0.16.2"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.37"
